@@ -8,7 +8,6 @@ import com.aiportfolio.backend.domain.portfolio.model.Experience;
 import com.aiportfolio.backend.domain.portfolio.model.Project;
 import com.aiportfolio.backend.domain.portfolio.port.in.GetProjectsUseCase;
 import com.aiportfolio.backend.domain.portfolio.port.in.GetAllDataUseCase;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import lombok.extern.slf4j.Slf4j;
@@ -18,7 +17,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * 데이터 웹 컨트롤러 (헥사고날 아키텍처 Infrastructure/Web Layer)
@@ -32,15 +30,12 @@ public class DataController {
     
     private final GetProjectsUseCase getProjectsUseCase;
     private final GetAllDataUseCase getAllDataUseCase;
-    private final ObjectMapper objectMapper;
     
     public DataController(
             @Qualifier("portfolioService") GetProjectsUseCase getProjectsUseCase,
-            @Qualifier("portfolioApplicationService") GetAllDataUseCase getAllDataUseCase,
-            ObjectMapper objectMapper) {
+            @Qualifier("portfolioApplicationService") GetAllDataUseCase getAllDataUseCase) {
         this.getProjectsUseCase = getProjectsUseCase;
         this.getAllDataUseCase = getAllDataUseCase;
-        this.objectMapper = objectMapper;
     }
     
     @GetMapping("/all")
@@ -52,8 +47,10 @@ public class DataController {
         Object projects = allData.get("projects");
         if (projects instanceof List<?> projectList) {
             List<ProjectDataResponse> mappedProjects = projectList.stream()
-                .map(this::toProjectResponse)
-                .collect(Collectors.toList());
+                .filter(Project.class::isInstance)
+                .map(Project.class::cast)
+                .map(ProjectDataResponse::from)
+                .toList();
             responseData.put("projects", mappedProjects);
         }
 
@@ -63,11 +60,11 @@ public class DataController {
     @GetMapping("/projects")
     @Operation(summary = "프로젝트 데이터 조회", description = "모든 프로젝트 정보를 조회합니다.")
     public ResponseEntity<ApiResponse<List<ProjectDataResponse>>> getProjects() {
-        List<?> rawProjects = getProjectsUseCase.getAllProjects();
-        List<ProjectDataResponse> projects = rawProjects.stream()
-            .map(this::toProjectResponse)
-            .collect(Collectors.toList());
-        return ResponseEntity.ok(ApiResponse.success(projects, "프로젝트 목록 조회 성공"));
+        List<Project> projects = getProjectsUseCase.getAllProjects();
+        List<ProjectDataResponse> responses = projects.stream()
+            .map(ProjectDataResponse::from)
+            .toList();
+        return ResponseEntity.ok(ApiResponse.success(responses, "프로젝트 목록 조회 성공"));
     }
     
     @GetMapping("/experiences")
@@ -91,12 +88,4 @@ public class DataController {
         return ResponseEntity.ok(ApiResponse.success(education, "교육 목록 조회 성공"));
     }
 
-    private ProjectDataResponse toProjectResponse(Object value) {
-        if (value instanceof Project project) {
-            return ProjectDataResponse.from(project);
-        }
-
-        Project project = objectMapper.convertValue(value, Project.class);
-        return ProjectDataResponse.from(project);
-    }
 }
